--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       border-radius: 5px;
       cursor: pointer;
     }
+    .hint {
+      background: #fff3cd;
+      border-left: 5px solid #ffeeba;
+      padding: 10px;
+      margin-top: 10px;
+    }
   </style>
 </head>
 <body>
@@ -25,8 +31,6 @@
     <select id="subject">
       <option value="">--Choose--</option>
       <option value="Math">Math</option>
-      <option value="Science">Science</option>
-      <option value="English">English</option>
     </select>
     <button onclick="loadDiagnostic()">Start</button>
   </div>
@@ -46,6 +50,7 @@
   <div class="step" id="step4">
     <h3>Results</h3>
     <div id="results"></div>
+    <div id="hintsSection"></div>
     <p id="feedback" style="font-weight: bold; margin-top: 10px;"></p>
     <button id="nextQuizBtn" style="display: none;" onclick="takeNextQuiz()">Take Another Quiz</button>
   </div>
@@ -111,6 +116,17 @@
           <p><strong>📈 Next Suggested Difficulty:</strong> ${res.next}</p>
         `;
 
+        // Hints if needed
+        const hintsDiv = document.getElementById("hintsSection");
+        hintsDiv.innerHTML = "";
+        if (res.hints && res.hints.length > 0) {
+          hintsDiv.innerHTML += `<h4>🧠 Tips to Review:</h4>`;
+          res.hints.forEach(h => {
+            hintsDiv.innerHTML += `<div class="hint">💡 ${h}</div>`;
+          });
+        }
+
+        // Feedback
         let feedback = "";
         if (res.score === 2) {
           feedback = "🔥 Awesome! You're ready for a challenge!";
@@ -142,6 +158,8 @@
         show("step3");
         document.getElementById("nextQuizBtn").style.display = "none";
         document.getElementById("feedback").innerText = "";
+        document.getElementById("results").innerHTML = "";
+        document.getElementById("hintsSection").innerHTML = "";
       });
     }
   </script>
